--- a/SQLiteOnly/SQLiteOnly/MainPage.xaml
+++ b/SQLiteOnly/SQLiteOnly/MainPage.xaml
@@ -2,10 +2,21 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:SQLiteOnly"
-             x:Class="SQLiteOnly.MainPage">
+             x:Class="SQLiteOnly.MainPage"
+             Padding="20">
 
-	<Label Text="Welcome to Xamarin Forms!" 
-           VerticalOptions="Center" 
-           HorizontalOptions="Center" />
-
+    <StackLayout>
+        <StackLayout Orientation="Horizontal">
+            <Button Text="Add" BackgroundColor="DarkOliveGreen" HorizontalOptions="StartAndExpand" Clicked="OnAdd" />
+            <Button Text="Update" BackgroundColor="Khaki" HorizontalOptions="CenterAndExpand" Clicked="OnUpdate"  />
+            <Button Text="Delete" BackgroundColor="Crimson" HorizontalOptions="EndAndExpand" Clicked="OnDelete" />
+        </StackLayout>
+        <ListView ItemsSource="{Binding ObservableRecipes}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Text="{Binding Name}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+    </StackLayout>
 </ContentPage>
